2018-01-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* Added the pane layout manager.

0.10
	Initial release.