@@ -2,5 +2,8 @@
 
 	* Added the pane layout manager.
 
+	* Replaced new_listlayoutmanager.rows with new_listlayoutmanager.height
+	in order to accomodate the pane layout manager.
+
 0.10
 	Initial release.
